[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/turrets/combinators/BurstFire.gd" type="Script" id=1]

[node name="BurstFire" type="Node2D"]
script = ExtResource( 1 )

[node name="StartDelayTimer" type="Timer" parent="."]
one_shot = true

[node name="LaserTimer" type="Timer" parent="."]

[node name="FireTimer" type="Timer" parent="."]

[node name="CoolTimer" type="Timer" parent="."]

[connection signal="timeout" from="StartDelayTimer" to="." method="_on_StartDelayTimer_timeout"]
[connection signal="timeout" from="LaserTimer" to="." method="_on_LaserTimer_timeout"]
[connection signal="timeout" from="FireTimer" to="." method="_on_FireTimer_timeout"]
[connection signal="timeout" from="CoolTimer" to="." method="_on_CoolTimer_timeout"]
